Make sure that every #include is followed by space

When there is no space, lupdate complains that it cannot infer what class the
tr() calls belongs to. This is arguably a bug -- filed as [1].

Thanks to Albert Astals Cid <aacid@kde.org> for reporting that Trojita was
triggering an lupdate warning.

CCMAIL: aacid@kde.org

[1] https://bugreports.qt-project.org/browse/QTBUG-34092